// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<Link>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</Link>
`;

exports[`2. lead one and one slice 1`] = `
<View>
  <View>
    <View>
      <Link>
        <View>
          <View>
            <Text>
              ROYALS
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Prince Philip ‘could be prosecuted’ over car crash
          </Text>
          <ArticleFlags
            flags={
              Array [
                "NEW",
              ]
            }
          />
        </View>
        <View>
          <Image
            aspectRatio={1.7777777777777777}
            uri="https://img/someImage"
          />
        </View>
      </Link>
    </View>
  </View>
  <View>
    <View>
      <Link>
        <View>
          <View>
            <View>
              <Text>
                CYBER CRIME
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              GCHQ gives girls free cyber-classes to tackle gender gap
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "UPDATED",
                ]
              }
            />
            <Text>
              <Text>
                
                GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
              </Text>
              <Text>
                 
                The intelligence
                ...
              </Text>
            </Text>
          </View>
        </View>
      </Link>
    </View>
  </View>
</View>
`;

exports[`3. lead one and four slice 1`] = `
<View>
  <Link
    url="/article/123"
  >
    <View>
      <Image
        aspectRatio={1.7777777777777777}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
      />
    </View>
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <ArticleFlags
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
    </View>
  </Link>
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Image
          aspectRatio={1.5}
          uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
        />
      </View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </View>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Image
          aspectRatio={1.5}
          uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
        />
      </View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </View>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Image
          aspectRatio={1.5}
          uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
        />
      </View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </View>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Image
          aspectRatio={1.5}
          uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
        />
      </View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </View>
    </View>
  </Link>
</View>
`;

exports[`4. lead two no pic and two 1`] = `
<View>
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Text>
          LABEL
        </Text>
      </View>
      <Text
        accessibilityRole="heading"
        aria-level="3"
      >
        Venezuela shows how Corbyn’s socialism works
      </Text>
      <Text
        accessibilityRole="heading"
        aria-level="4"
      >
        Labour’s admiration for a regime that has squandered its resources and left its people in penury should be a warning to all
      </Text>
      <ArticleFlags
        flags={
          Array [
            "EXCLUSIVE",
          ]
        }
      />
      <Text>
        <Text>
          
          Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
          ...
        </Text>
      </Text>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
        <Text>
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Image
          aspectRatio={1.5}
          uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
        />
      </View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </View>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Image
          aspectRatio={0.8}
          uri="//thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1434%2C1792%2C627%2C0"
        />
      </View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </View>
    </View>
  </Link>
</View>
`;

exports[`5. secondary one slice 1`] = `
<Link>
  <View>
    <View>
      <Text>
        ROYALS
      </Text>
    </View>
    <Text
      accessibilityRole="heading"
      aria-level="3"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
    <ArticleFlags
      flags={
        Array [
          "NEW",
        ]
      }
    />
  </View>
  <View>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </View>
</Link>
`;

exports[`6. secondary four 1`] = `
<View>
  <View>
    <View>
      <Link
        url="/article/123"
      >
        <View>
          <View>
            <Image
              aspectRatio={1.7777777777777777}
              uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
            />
          </View>
          <View>
            <View>
              <Text>
                LABEL
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "EXCLUSIVE",
                ]
              }
            />
          </View>
        </View>
      </Link>
    </View>
    <View />
    <View>
      <Link
        url="/article/123"
      >
        <View>
          <View>
            <Image
              aspectRatio={1.7777777777777777}
              uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
            />
          </View>
          <View>
            <View>
              <Text>
                LABEL
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "EXCLUSIVE",
                ]
              }
            />
          </View>
        </View>
      </Link>
    </View>
  </View>
  <View />
  <View>
    <View>
      <Link
        url="/article/123"
      >
        <View>
          <View>
            <Image
              aspectRatio={1.7777777777777777}
              uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
            />
          </View>
          <View>
            <View>
              <Text>
                LABEL
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "EXCLUSIVE",
                ]
              }
            />
          </View>
        </View>
      </Link>
    </View>
    <View />
    <View>
      <Link
        url="/article/123"
      >
        <View>
          <View>
            <Image
              aspectRatio={1.7777777777777777}
              uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
            />
          </View>
          <View>
            <View>
              <Text>
                LABEL
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "EXCLUSIVE",
                ]
              }
            />
          </View>
        </View>
      </Link>
    </View>
  </View>
</View>
`;

exports[`7. secondary two and two 1`] = `
<View>
  <View>
    <View>
      <Link
        url="/article/123"
      >
        <View>
          <View>
            <Image
              aspectRatio={1.7777777777777777}
              uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
            />
          </View>
          <View>
            <View>
              <Text>
                LABEL
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "EXCLUSIVE",
                ]
              }
            />
          </View>
        </View>
      </Link>
    </View>
    <View />
    <View>
      <Link
        url="/article/123"
      >
        <View>
          <View>
            <Image
              aspectRatio={1.7777777777777777}
              uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
            />
          </View>
          <View>
            <View>
              <Text>
                LABEL
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "EXCLUSIVE",
                ]
              }
            />
          </View>
        </View>
      </Link>
    </View>
  </View>
  <View />
  <View>
    <Link
      url="/article/123"
    >
      <View>
        <View>
          <Image
            aspectRatio={1}
            borderRadius={187.5}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
          />
        </View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </Link>
  </View>
  <View />
  <View>
    <Link
      url="/article/123"
    >
      <View>
        <View>
          <Image
            aspectRatio={1}
            borderRadius={187.5}
            uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
          />
        </View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </Link>
  </View>
</View>
`;

exports[`8. secondary two no pic and two 1`] = `
<View>
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
        <Text>
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
        <Text>
          <Text>
            
            Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
            ...
          </Text>
        </Text>
      </View>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Image
          aspectRatio={1}
          borderRadius={187.5}
          uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
        />
      </View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </View>
    </View>
  </Link>
  <View />
  <Link
    url="/article/123"
  >
    <View>
      <View>
        <Image
          aspectRatio={1}
          borderRadius={187.5}
          uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
        />
      </View>
      <View>
        <View>
          <Text>
            LABEL
          </Text>
        </View>
        <Text
          accessibilityRole="heading"
          aria-level="3"
        >
          Venezuela shows how Corbyn’s socialism works
        </Text>
        <ArticleFlags
          flags={
            Array [
              "EXCLUSIVE",
            ]
          }
        />
      </View>
    </View>
  </Link>
</View>
`;

exports[`9. list two and six no pic 1`] = `
<View>
  <View>
    <View>
      <Link
        url="/article/123"
      >
        <View>
          <View>
            <Image
              aspectRatio={1.7777777777777777}
              uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
            />
          </View>
          <View>
            <View>
              <Text>
                LABEL
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "EXCLUSIVE",
                ]
              }
            />
          </View>
        </View>
      </Link>
    </View>
    <View />
    <View>
      <Link
        url="/article/123"
      >
        <View>
          <View>
            <Image
              aspectRatio={1.7777777777777777}
              uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
            />
          </View>
          <View>
            <View>
              <Text>
                LABEL
              </Text>
            </View>
            <Text
              accessibilityRole="heading"
              aria-level="3"
            >
              Venezuela shows how Corbyn’s socialism works
            </Text>
            <ArticleFlags
              flags={
                Array [
                  "EXCLUSIVE",
                ]
              }
            />
          </View>
        </View>
      </Link>
    </View>
  </View>
  <View />
  <View>
    <Link
      url="/article/123"
    >
      <View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </Link>
    <View />
  </View>
  <View>
    <Link
      url="/article/123"
    >
      <View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </Link>
    <View />
  </View>
  <View>
    <Link
      url="/article/123"
    >
      <View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </Link>
    <View />
  </View>
  <View>
    <Link
      url="/article/123"
    >
      <View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </Link>
    <View />
  </View>
  <View>
    <Link
      url="/article/123"
    >
      <View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </Link>
    <View />
  </View>
  <View>
    <Link
      url="/article/123"
    >
      <View>
        <View>
          <View>
            <Text>
              LABEL
            </Text>
          </View>
          <Text
            accessibilityRole="heading"
            aria-level="3"
          >
            Venezuela shows how Corbyn’s socialism works
          </Text>
          <ArticleFlags
            flags={
              Array [
                "EXCLUSIVE",
              ]
            }
          />
        </View>
      </View>
    </Link>
  </View>
</View>
`;
